--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  provider: ^6.0.4
   shared_preferences: ^2.0.15
 
 dev_dependencies:
